﻿shmuel 18.01.2015 20:58:13 +0200 - build 4245

1. Данные одноимённых контент-колонок от разных плагинов конкатенируются.

shmuel 17.01.2015 23:30:07 +0200 - build 4244

1. Рефакторинг.

drkns 17.01.2015 23:10:50 +0200 - build 4243

1. 0002908: Исключение при попытке отображения описания при некорректном Descript.ion

drkns 17.01.2015 16:00:16 +0200 - build 4242

1. Продолжение 4241.

1. Поддержка компиляции в Intel C++ 14.

drkns 17.01.2015 09:38:11 +0200 - build 4241

1. Race condition при far /?

2. Уточнение 4232.

3. Рефакторинг.

zg 16.01.2015 00:46:37 +0200 - build 4240

1. исправление altf9 в быстром поиске.

svs 14.01.2015 12:54:28 +0300 - build 4239

1. F1 в грабере (Alt-Ins) показывает раздел помощи "MiscCmd".
   Выделение области после гашения окна помощи не прерывается.

shmuel 11.01.2015 20:00:05 +0200 - build 4238

1. Рефакторинг.

drkns 09.01.2015 19:25:37 +0200 - build 4237

1. 0002849: ProcessSynchroEventW вызывается при DMODE_NOPLUGINS.

zg 09.01.2015 01:10:36 +0200 - build 4236

1. после закрытия меню фильтров некорректно перерисовывались панели.

zg 09.01.2015 00:44:51 +0200 - build 4235

1. ACTL_REDRAWALL теперь перерисовывает всё.

drkns 08.01.2015 22:22:57 +0200 - build 4234

1. Рефакторинг.

2. VS2015 warnings.

drkns 04.01.2015 19:27:27 +0200 - build 4233

1. Рефакторинг.

drkns 03.01.2015 12:36:25 +0200 - build 4232

1. Рефакторинг.

zg 02.01.2015 13:56:19 +0200 - build 4231

1. 0002896: Присвоить гуид диалогу редактирования фильтра панели.

drkns 30.12.2014 18:01:40 +0200 - build 4230

1. Используем std::regex во внутреннем парсере путей, во избежание.
   Минимальная версия gcc теперь 4.9.

drkns 27.12.2014 15:13:59 +0200 - build 4229

1. 0002845: Wrong Handling of "exclamation marks" in Menu item "!?<title>?<init>!"

zg 26.12.2014 18:50:17 +0200 - build 4228

1. быстрый поиск в панелях не всегда корректно перерисовывался.

drkns 24.12.2014 22:53:03 +0200 - build 4227

1. Продолжение #0002893 - добавлено повышение полномочий.
