@@ -1,4 +1,8 @@
-﻿shmuel 18.01.2015 20:58:13 +0200 - build 4245
+﻿drkns 19.01.2015 20:24:15 +0200 - build 4246
+
+1. Уточнение отображения прогресса при удалении файлов.
+
+shmuel 18.01.2015 20:58:13 +0200 - build 4245
 
 1. Данные одноимённых контент-колонок от разных плагинов конкатенируются.
 
